--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -85,7 +85,7 @@
 
                 const loader = new THREE.TextureLoader();
                 loader.load(
-                        'zmap.png',
+                        'zmap1.png',
                         function (texture) {
                             const material = new THREE.MeshBasicMaterial({
                                 map: texture
@@ -102,7 +102,7 @@
                                 //vertices[ j +1 ] = data[i]*2;
                                 geometry.attributes.position.array[j + 1] = data[i] / 6;
                             }
-                            //geometry.computeVertexNormals();
+                            geometry.computeVertexNormals();
                             plane = new THREE.Mesh(geometry, material);
 
 
@@ -121,7 +121,7 @@
 
 
             };
-            img.src = "zmap.png";
+            img.src = "zmap1.png";
 
             function getHeightData(img, scale) {
 
