--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -149,7 +149,7 @@
 
                 for (var i = 0, n = data.length; i < n; i += 4) {
                     // get the average value of R, G and B.
-                    normPixels.push((data[i] + data[i + 1] + data[i + 2]) / 3);
+                   // normPixels.push((data[i] + data[i + 1] + data[i + 2]) / 3);
                 }
 
                 return normPixels;
